# iot-development

./: README.md  pyproject.toml
src/net/: main.py
src/net.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
