[project]
name = "net"
version = "0.1.0"
description = "Network scanning tools"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0"
]

[project.scripts]
net = "net.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
